force-app/main/default/objects/Animal__c/fields/Show_image__c.field-meta.xml
<CustomField>
    <fullName>Show_image__c</fullName>
    <formula>IMAGE( Photo__c, &quot;Dynamic Image&quot;, 100,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show image</label>
    <type>Text</type>
</CustomField>