force-app/main/default/objects/Animal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available for adoption</fullName>
            </value>
            <value>
                <fullName>Undergoing medical treatment</fullName>
            </value>
            <value>
                <fullName>Waiting for behavioral evaluation</fullName>
            </value>
            <value>
                <fullName>Will be leaving the shelter soon</fullName>
            </value>
            <value>
                <fullName>Under constant care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>